--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -30,13 +30,13 @@ steps:
   displayName: 'Print Parameters'
 
 - bash: |
-    # Fetch the correct rustup-init binary for the host arch (arm64 or x86_64)
-    curl --proto '=https' --tlsv1.2 -sSf https://static.rust-lang.org/rustup/dist/$(uname -m)-apple-darwin/rustup-init -o rustup-init
-    chmod +x rustup-init
-    # Install the desired toolchain non-interactively
-    ./rustup-init -y --default-toolchain 1.86.0
-    # Make the newly installed cargo binaries available to later tasks
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
     echo '##vso[task.prependpath]$HOME/.cargo/bin'
+    source "$HOME/.cargo/env"
+    rustup install 1.86.0
+    rustup override set 1.86.0
+    rustup component add rust-src
+    rustup show active-toolchain
   displayName: 'Install Rust Toolchain'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
