--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -36,17 +36,21 @@ steps:
     rustup toolchain install 1.86.0
     rustup default 1.86.0
     rustup component add rust-src --toolchain 1.86.0
-    # Apple-silicon (arm64)
-    rustup target add aarch64-apple-darwin --toolchain 1.86.0
-    # Make C/C++ match the target
-    export CFLAGS="-arch arm64"
-    export CXXFLAGS="$CFLAGS"
-    export MACOSX_DEPLOYMENT_TARGET=12.0
-    # Build for arm64
-    cargo build --release --target aarch64-apple-darwin
-    # Show the active toolchain
     rustup show active-toolchain
   displayName: 'Install Rust Toolchain'
+  condition: eq(variables['arch'], 'x64')
+  workingDirectory: '$(Build.Repository.LocalPath)'
+
+- bash: |
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+    echo '##vso[task.prependpath]$HOME/.cargo/bin'
+    source "$HOME/.cargo/env"
+    rustup toolchain install 1.86.0-aarch64-apple-darwin
+    rustup default 1.86.0-aarch64-apple-darwin
+    rustup component add rust-src --toolchain 1.86.0-aarch64-apple-darwin
+    rustup show active-toolchain
+  displayName: 'Install Rust Toolchain'
+  condition: eq(variables['arch'], 'arm64')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
