--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -51,7 +51,7 @@ steps:
     echo '##vso[task.prependpath]$HOME/.cargo/bin'
     source "$HOME/.cargo/env"
     rustup toolchain install 1.86.0
-    rustup default 1.86.0
+    rustup override set 1.86.0
     rustup target add aarch64-apple-darwin --toolchain 1.86.0
     echo "##vso[task.setvariable variable=RUST_TARGET_TRIPLE]aarch64-apple-darwin"
     rustc --version
@@ -80,11 +80,13 @@ steps:
     $env:MACOSX_DEPLOYMENT_TARGET = "12.0" # Monterey
     # $env:RUSTFLAGS='-C link-arg=-Wl,-undefined,dynamic_lookup -C link-arg=-Wl,-no_dead_strip_inits_and_terms'
     $env:RUST_TARGET_TRIPLE="$(RUST_TARGET_TRIPLE)"
-    $env:CC="$env:LLVM_PREFIX\bin\clang"
-    $env:CXX="$env:LLVM_PREFIX\bin\clang++"
+    $env:clang="$env:LLVM_PREFIX\bin\clang"
+    $env:clangxx="$env:LLVM_PREFIX\bin\clang++"
     $env:CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER = $clang
     $env:CC_aarch64_apple_darwin = $clang
     $env:CXX_aarch64_apple_darwin = $clangxx
+    $env:target="aarch64-apple-darwin"
+    $env:CARGO_BUILD_TARGET = "aarch64-apple-darwin"
 
     # (Optional but keeps things clean)
     Remove-Item Env:CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER -ErrorAction SilentlyContinue
@@ -98,6 +100,9 @@ steps:
     $env:RUST_TARGET_TRIPLE = "$(RUST_TARGET_TRIPLE)"
     $env:CC  = "$(LLVM_PREFIX)\bin\clang"
     $env:CXX = "$(LLVM_PREFIX)\bin\clang++"
+    $env:CARGO_BUILD_TARGET = "aarch64-apple-darwin"   # ← NEW (cargo-wide)
+    $env:RUSTFLAGS         = "-C target-cpu=apple-a14" # optional tuning
+    $env:target="aarch64-apple-darwin"
     cmake --build --preset macos_$(arch)_$(ep)_$(build_config) --parallel --target ${{ parameters.target }} --clean-first --verbose
   displayName: 'Build C API'
   workingDirectory: '$(Build.Repository.LocalPath)'
