--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -101,7 +101,7 @@ steps:
     $env:CC  = "$(LLVM_PREFIX)\bin\clang"
     $env:CXX = "$(LLVM_PREFIX)\bin\clang++"
     $env:CARGO_BUILD_TARGET = "aarch64-apple-darwin"   # ← NEW (cargo-wide)
-    $env:RUSTFLAGS         = "-C target-cpu=apple-a14" # optional tuning
+    # $env:RUSTFLAGS         = "-C target-cpu=apple-a14" # optional tuning
     $env:target="aarch64-apple-darwin"
     cmake --build --preset macos_$(arch)_$(ep)_$(build_config) --parallel --target ${{ parameters.target }} --clean-first --verbose
   displayName: 'Build C API'
