--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -57,38 +57,33 @@ steps:
     $env:MACOSX_DEPLOYMENT_TARGET = "12.0" # Monterey
     $env:CC="$env:LLVM_PREFIX\bin\clang"
     $env:CXX="$env:LLVM_PREFIX\bin\clang++"
-
-    if ($env:PROCESSOR_ARCHITECTURE -eq "ARM64") {
-      Write-Host "Configuring Environment for ARM64"
-      $env:CARGO_BUILD_TARGET = "aarch64-apple-darwin"
-      $env:CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER = $env:CC
-      $env:CC_aarch64_apple_darwin = $env:CC
-      $env:CXX_aarch64_apple_darwin = $env:CXX
-      Remove-Item Env:CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER -ErrorAction SilentlyContinue
-      Remove-Item Env:CC_x86_64_apple_darwin -ErrorAction SilentlyContinue
-      cmake --preset macos_$(arch)_$(ep)_$(build_config) -DCMAKE_OSX_ARCHITECTURES=arm64 -DRust_CARGO_TARGET=aarch64-apple-darwin
-    } else {
-      Write-Host "Configuring Environment for x64"
-      cmake --preset macos_$(arch)_$(ep)_$(build_config)
-    }
-    # $env:CC_aarch64_apple_darwin = $env:CC
-    # $env:CXX_aarch64_apple_darwin = $env:CXX
-    # (Optional but keeps things clean)
-    # Remove-Item Env:CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER -ErrorAction SilentlyContinue
-    # Remove-Item Env:CC_x86_64_apple_darwin -ErrorAction SilentlyContinue
-    # Remove-Item Env:RUSTFLAGS -ErrorAction SilentlyContinue   # no dynamic_lookup
-
-    # cmake --preset macos_$(arch)_$(ep)_$(build_config) -DCMAKE_OSX_ARCHITECTURES=arm64 -DRust_CARGO_TARGET=aarch64-apple-darwin
-  displayName: 'Configure CMake C API'
+    $env:CARGO_BUILD_TARGET = "aarch64-apple-darwin"
+    $env:CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER = $env:CC
+    $env:CC_aarch64_apple_darwin = $env:CC
+    $env:CXX_aarch64_apple_darwin = $env:CXX
+    Remove-Item Env:CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER -ErrorAction SilentlyContinue
+    Remove-Item Env:CC_x86_64_apple_darwin -ErrorAction SilentlyContinue
+    cmake --preset macos_$(arch)_$(ep)_$(build_config) -DCMAKE_OSX_ARCHITECTURES=arm64 -DRust_CARGO_TARGET=aarch64-apple-darwin
+  displayName: 'Configure CMake C for ARM64'
+  condition: eq(variables['arch'], 'arm64')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
-    $env:CARGO_BUILD_TARGET                      = 'aarch64-apple-darwin'
-    $env:CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER = "$env:LLVM_PREFIX\bin\clang"
-    $env:CC_aarch64_apple_darwin                 = "$env:LLVM_PREFIX\bin\clang"
-    $env:CXX_aarch64_apple_darwin                = "$env:LLVM_PREFIX\bin\clang++"
-    $env:CC                                       = "$env:LLVM_PREFIX\bin\clang"
-    $env:CXX                                      = "$env:LLVM_PREFIX\bin\clang++"
+    $env:MACOSX_DEPLOYMENT_TARGET = "12.0" # Monterey
+    $env:CC="$env:LLVM_PREFIX\bin\clang"
+    $env:CXX="$env:LLVM_PREFIX\bin\clang++"
+    cmake --preset macos_$(arch)_$(ep)_$(build_config)
+  displayName: 'Configure CMake C for x64'
+  condition: eq(variables['arch'], 'x64')
+  workingDirectory: '$(Build.Repository.LocalPath)'
+
+- powershell: |
+    # $env:CARGO_BUILD_TARGET                      = 'aarch64-apple-darwin'
+    # $env:CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER = "$env:LLVM_PREFIX\bin\clang"
+    # $env:CC_aarch64_apple_darwin                 = "$env:LLVM_PREFIX\bin\clang"
+    # $env:CXX_aarch64_apple_darwin                = "$env:LLVM_PREFIX\bin\clang++"
+    # $env:CC                                       = "$env:LLVM_PREFIX\bin\clang"
+    # $env:CXX                                      = "$env:LLVM_PREFIX\bin\clang++"
     cmake --build --preset macos_$(arch)_$(ep)_$(build_config) --parallel --target ${{ parameters.target }} --clean-first --verbose
   displayName: 'Build C API'
   workingDirectory: '$(Build.Repository.LocalPath)'
